# Marketplace-for-AI-Agentic-Operators

./: .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  CONTEXT.md  ECOSYSTEM_ADOPTION_MAP.md  MEMORY.md  PLAN.md  README.md  REPO_ENTRY_MATRIX.md  TECHNICAL_REFERENCE.md  filetree.md
Docs/: AGENTS.md
Registry/: README.md  plugins.yaml
general-agent-runtime/: AGENTS.md  COMPILED_CONSTITUTION.md  COMPILED_KERNEL.md  CONTEXT.md  MEMORY.md  README_DEPLOYMENT.md  STAGING_ANALYSIS.md  config.toml  config_patched.toml  hooks.json  hooks_merged_petdex_sovereign.json  research.config.toml  sovereign.config.toml  stealth.config.toml  validation_manifest.json  workflows.md
muaddib-tool-network/: 5-26-2026-muaddib-mcp-filetree.md  (+28 more)
plugins/Cognitive-Topology-Map/core/: README.md  pyproject.toml
plugins/Cognitive-Topology-Map/core/ctmv3/: __init__.py  __main__.py
plugins/Cognitive-Topology-Map/core/ctmv3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plugins/Cognitive-Topology-Map/core/ctmv3/core/: __init__.py  activate.py  architecture_map.py  boot.py  cli.py  dot_init.py  fingerprint.py  orchestration.py  sovereign.py  templates.py
plugins/Cognitive-Topology-Map/core/ctmv3/core/templates/: AGENTS.md.template  ARCHITECTURE_MAP.md.template  CLAUDE.md.template  FAILURE_GRAMMAR.md.template  PROVENANCE.md.template  TOPOLOGY.md.template  copilot-instructions.md.template  topology-enforce.yml.template
plugins/Cognitive-Topology-Map/core/ctmv3/core/templates/extras/: claude-settings.json.template  golden_paths.json.template  pre-commit-config.yaml.template  session_state.json.template
plugins/Cognitive-Topology-Map/core/ctmv3/tests/: __init__.py  test_engine.py
(+495 files in other folders)
