[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmv3"
version = "1.2.0"
description = "CTMv3 — Cognitive Topology Map v3 Workspace Activation System. A codebase onboarding engine that scaffolds the agent-facing artifact set (TOPOLOGY.md, FAILURE_GRAMMAR.md, ARCHITECTURE_MAP.md, PROVENANCE.md, AGENTS.md, .sovereign/, .claude/, .codex/, .github/) into any repo, cross-runtime across Claude Code, Codex, opencode, Gemini CLI, and Cursor."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daeron"}
]
keywords = ["ctmv3", "agent", "workspace", "activation", "topology", "claude-code", "codex", "opencode", "gemini-cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/daeron/ctmv3-plugin"
Documentation = "https://github.com/daeron/ctmv3-plugin/tree/main/docs"

[project.scripts]
ctmv3 = "ctmv3.core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctmv3*"]
exclude = ["ctmv3.tests*"]

[tool.setuptools.package-data]
"ctmv3.core" = ["templates/*.template", "templates/*.yaml.template", "templates/*.yml.template", "templates/*.json.template"]
